--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "files": [
     "index.js",
     "react.js",
-    "prettier.js"
+    "prettier.js",
+    "getOverride.js"
   ],
   "dependencies": {
     "@amille/eslint-config": "^1.4.31",
